--- a/src/app.pcss
+++ b/src/app.pcss
@@ -33,7 +33,7 @@
  
     --ring: 240 10% 3.9%;
  
-    --radius: 0.5rem;
+    --radius: 0rem;
   }
  
   .dark {
@@ -69,10 +69,32 @@
 }
  
 @layer base {
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    src: url('/fonts/Montserrat-Arabic-Regular.ttf') format('truetype');
+  }
   * {
     @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.title {
+  @apply text-3xl font-bold text-justify
+}
+
+.subtitle {
+  @apply text-xl text-justify
+}
+
+.label {
+  @apply text-lg font-bold text-justify
+}
+
+.center {
+  @apply text-center !important
 }
