--- a/src/app.pcss
+++ b/src/app.pcss
@@ -74,6 +74,7 @@
     font-style: normal;
     font-weight: 400;
     src: url('/fonts/Montserrat-Arabic-Regular.ttf') format('truetype');
+    font-display: swap;
   }
   * {
     @apply border-border;
@@ -88,7 +89,7 @@
 }
 
 .subtitle {
-  @apply text-xl text-justify
+  @apply text-lg text-justify
 }
 
 .label {
